--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 streamlit
 langchain
 langchain-community
-langchain-text-splitters
+langchain-huggingface
 pypdf
 chromadb
 sentence-transformers
-huggingface_hub
 torch
